example-manifests/00-plain-k8s/00-v1.0.0/demo-v1-0-0-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: demo-v1-0-0
  namespace: demo
spec:
  type: ClusterIP
  selector: 
    name: demo
    version: "v1.0.0"
  ports:
  - name: http
    port: 80
    targetPort: 8080
