example-manifests/00-plain-k8s/00-v1.0.0/demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
  namespace: demo
spec:
  rules:
  - host: demo.example.com
    http:
      paths:
      - backend:
          serviceName: demo-v1-0-0
          servicePort: 80
status:
  loadBalancer: {}
